syntax = "proto2";

package voting.active;

import "google/protobuf/timestamp.proto";
import "voting.proto";

service eVotingReplica {
    rpc ElectionReplica (voting.Election) returns (Status);
    rpc CastVoteReplica (Vote) returns (Status);
    rpc GetResultReplica (ElectionName) returns (ElectionResult);
    rpc ElectionRecovery (Status) returns (Elections);
}

message Voter {
    required string name = 1;
    required string group = 2;
}
message Status {
    required int32 code = 1;
}

message Election {
    required string name = 1;
    repeated string groups = 2;
    repeated string choices = 3;
    required google.protobuf.Timestamp end_date = 4;
}
message Vote {
    required string election_name = 1;
    required string choice_name = 2;
}

message ElectionName {
    required string name = 1;
}

message VoteCount {
    required string choice_name = 1;
    required int32 count = 2;
}

message ElectionResult {
    required int32 status = 1;
    repeated VoteCount count = 2; 
}

message ElectionStatus {
    required string name = 1;
    repeated string groups = 2;
    repeated string choices = 3;
    repeated VoteCount count = 4;
    repeated string voters = 5;
    required google.protobuf.Timestamp end_date = 6;
}

message Elections {
    repeated ElectionStatus elections = 1;
}

